Linked Location with Feedbacks and Refactored Code

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,17 +18,21 @@ django-phonenumber-field==7.3.0
 djangorestframework==3.14.0
 drf-spectacular==0.27.2
 drf-yasg==1.21.7
+flake8==7.0.0
 flower==2.0.1
 humanize==4.9.0
 inflection==0.5.1
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kombu==5.3.7
+mccabe==0.7.0
 packaging==24.0
 phonenumbers==8.13.30
 pillow==10.2.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
+pycodestyle==2.11.1
+pyflakes==3.2.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
