--- a/env.Example
+++ b/env.Example
@@ -1,12 +1,17 @@
-SECRET_KEY=secret key here
+SECRET_KEY=secret_key
 DEBUG=True
-ALLOWED_HOSTS=host list
-PRODUCTION=False
+ALLOWED_HOSTS=host_list
 
-CORS_ALLOWED_ORIGINS=host list
+CORS_ALLOWED_ORIGINS=host_list
 
 POSTGRES_DB=db_name
 POSTGRES_USER=db_user
 POSTGRES_PASSWORD=db_password
 POSTGRES_HOST=db_host
 POSTGRES_PORT=db_port
+
+EMAIL_HOST_USER=email@gmail.com
+EMAIL_HOST_PASSWORD=email_password
+
+CELERY_BROKER_URL=broker_url
+CELERY_RESULT_BACKEND=result_backend
