--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
     depends_on:
       - postgres
       - redis
+      - migration
     volumes:
       - static_volume:/usr/src/app/back_static
       - media_volume:/usr/src/app/back_media
@@ -27,11 +28,13 @@ services:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      TZ: Asia/Bishkek
 
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/usr/src/app/back_static
@@ -52,6 +55,7 @@ services:
     depends_on:
       - django
       - redis
+      - migration
 
   celery-beat:
     build:
@@ -61,6 +65,13 @@ services:
       - django
       - redis
       - celery
+      - migration
+
+  migration:
+    build: .
+    command: sh -c "python manage.py makemigrations && python manage.py migrate"
+    depends_on:
+      - postgres
 
 volumes:
   postgres_data:
