renamed locations to filials, removed and added some fields

--- a/env.Example
+++ b/env.Example
@@ -1,8 +1,11 @@
 SECRET_KEY=secret_key
 DEBUG=True
 ALLOWED_HOSTS=host_list
+PRODUCTION=True
 
 CORS_ALLOWED_ORIGINS=host_list
+
+CSRF_TRUSTED_ORIGINS=origin_list
 
 POSTGRES_DB=db_name
 POSTGRES_USER=db_user
@@ -15,3 +18,5 @@ EMAIL_HOST_PASSWORD=email_password
 
 CELERY_BROKER_URL=broker_url
 CELERY_RESULT_BACKEND=result_backend
+
+CELERY_BEAT_SCHEDULER=celery.beat.PersistentScheduler
