--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,61 @@
-upstream core {
-    server django:8000;
+user root root;
+worker_processes 8;
+
+events {
+    worker_connections 512;
 }
 
-server {
+error_log /var/log/nginx-error.log info;
 
-    listen 80;
 
-    location / {
-        proxy_pass http://django:8000;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        client_max_body_size 100M;
+http {
+    include /etc/nginx/mime.types;
+    upstream server {
+        server django:8000;
     }
 
-    location /back_static/ {
-        root /usr/src/app;
+    server {
+       server_name booblik.pp.ua;
+
+       location ~ ^/(api/v1/|admin) {
+            proxy_pass http://server;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Host $server_name;
+            client_max_body_size 128M;
+            proxy_redirect off;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+       }
+
+       location /back-static/ {
+            root /usr/src/app;
+       }
+
+       location /back-media/ {
+            root /usr/src/app;
+       }
+
+        listen 443 ssl;
+        ssl_certificate /etc/letsencrypt/live/booblik.pp.ua/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/booblik.pp.ua/privkey.pem;
     }
 
-    location /back_media/ {
-        root /usr/src/app;
+    server {
+        if ($host = booblik.pp.ua) {
+            return 301 https://$host$request_uri;
+        }
+
+        if ($host = www.booblik.pp.ua) {
+            return 301 https://$host$request_uri;
+        }
+
+        listen 80;
+        server_name booblik.pp.ua;
+        return 404;
     }
 }
