--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,13 +32,15 @@ services:
       TZ: Asia/Bishkek
 
   nginx:
-    image: nginx:alpine
+    image: nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/usr/src/app/back_static
-      - media_volume:/usr/src/app/back_media
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - static_volume:/usr/src/app/back-static
+      - media_volume:/usr/src/app/back-media
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - django
 
