--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     }
 
     server {
-       server_name booblik.pp.ua;
+       server_name booblbackend-booblik.pp.ua;
 
        location ~ ^/(api/v1/|admin) {
             proxy_pass http://server;
@@ -41,21 +41,21 @@ http {
        }
 
         listen 443 ssl;
-        ssl_certificate /etc/letsencrypt/live/booblik.pp.ua/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/booblik.pp.ua/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/backend-booblik.pp.ua/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/backend-booblik.pp.ua/privkey.pem;
     }
 
     server {
-        if ($host = booblik.pp.ua) {
+        if ($host = backend-booblik.pp.ua) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.booblik.pp.ua) {
+        if ($host = www.backend-booblik.pp.ua) {
             return 301 https://$host$request_uri;
         }
 
         listen 80;
-        server_name booblik.pp.ua;
+        server_name backend-booblik.pp.ua;
         return 404;
     }
 }
