--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     }
 
     server {
-       server_name booblbackend-booblik.pp.ua;
+       server_name backend-booblik.pp.ua;
 
        location ~ ^/(api/v1/|admin) {
             proxy_pass http://server;
